--- a/cms.html
+++ b/cms.html
@@ -816,89 +816,104 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
   </div>
 </div>
 
-<div id="photowrapper" class="col-md-10 col-md-offset-1">
-
-<div class="gallery shadow">
+<div id="alumniawardswrapper" class="col-md-10 col-md-offset-1">
+  <div class="gallery shadow">
   <a target="_blank" href="img/IMG_0310.JPG">
     <img src="img/IMG_0310.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_0317.JPG">
     <img src="img/IMG_0317.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_0318.JPG">
     <img src="img/IMG_0318.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_0357.JPG">
     <img src="img/IMG_0357.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_1479.JPG">
     <img src="img/IMG_1479.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_1480.JPG">
     <img src="img/IMG_1480.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_1504.JPG">
     <img src="img/IMG_1504.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_1519.JPG">
     <img src="img/IMG_1519.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_1542.JPG">
     <img src="img/IMG_1542.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_5834.JPG">
     <img src="img/IMG_5834.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_5847.JPG">
     <img src="img/IMG_5847.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_5850.JPG">
     <img src="img/IMG_5850.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_5895.JPG">
     <img src="img/IMG_5895.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_7160.JPG">
     <img src="img/IMG_7160.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_7194.JPG">
     <img src="img/IMG_7194.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_7617.JPG">
     <img src="img/IMG_7617.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_7654.JPG">
     <img src="img/IMG_7654.JPG" alt="Fjords" width="300" height="200">
   </a>
@@ -913,18 +928,148 @@ Vivamus tempus, lectus ut maximus vestibulum, orci odio fringilla enim, vel feug
     <img src="img/IMG_7670.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_9097.JPG">
     <img src="img/IMG_9097.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
-</div><div class="gallery shadow">
+</div>
+<div class="gallery shadow">
   <a target="_blank" href="img/IMG_9108.JPG">
     <img src="img/IMG_9108.JPG" alt="Fjords" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 </div>
+
+<div id="photowrapper" class="col-md-10 col-md-offset-1">
+
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_0310.JPG">
+    <img src="img/IMG_0310.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_0317.JPG">
+    <img src="img/IMG_0317.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_0318.JPG">
+    <img src="img/IMG_0318.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_0357.JPG">
+    <img src="img/IMG_0357.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1479.JPG">
+    <img src="img/IMG_1479.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1480.JPG">
+    <img src="img/IMG_1480.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1504.JPG">
+    <img src="img/IMG_1504.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1519.JPG">
+    <img src="img/IMG_1519.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_1542.JPG">
+    <img src="img/IMG_1542.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_5834.JPG">
+    <img src="img/IMG_5834.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_5847.JPG">
+    <img src="img/IMG_5847.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_5850.JPG">
+    <img src="img/IMG_5850.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_5895.JPG">
+    <img src="img/IMG_5895.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7160.JPG">
+    <img src="img/IMG_7160.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7194.JPG">
+    <img src="img/IMG_7194.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7617.JPG">
+    <img src="img/IMG_7617.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7654.JPG">
+    <img src="img/IMG_7654.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7657.JPG">
+    <img src="img/IMG_7657.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div><div class="gallery shadow">
+  <a target="_blank" href="img/IMG_7670.JPG">
+    <img src="img/IMG_7670.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_9097.JPG">
+    <img src="img/IMG_9097.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+<div class="gallery shadow">
+  <a target="_blank" href="img/IMG_9108.JPG">
+    <img src="img/IMG_9108.JPG" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
 </div>
 
 <div id="alumnistudentmentorshipwrapper" class="row">
