--- a/cms.html
+++ b/cms.html
@@ -194,7 +194,7 @@
   <a target="_blank" href="img/NOTABLE_1.JPG">
     <img src="img/NOTABLE_1.JPG" width="300" height="200">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Mr. Ashok Manaktala<br>Batch of 1968.</div>
 </div>
 </div>
     <div class="col-md-3">
@@ -202,7 +202,7 @@
   <a target="_blank" href="img/NOTABLE_2.JPG">
     <img src="img/NOTABLE_2.JPG" width="300" height="200">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Prof. Bikramjit Basu<br>Batch of 1995, B.E., Department of MME.</div>
 </div>
     </div>
     <div class="col-md-3">
@@ -210,7 +210,7 @@
   <a target="_blank" href="img/NOTABLE_3.JPG">
     <img src="img/NOTABLE_3.JPG" width="300" height="200">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Mr. Dipendra Sharma<br>Batch of 1992.</div>
 </div>
     </div>
     <div class="col-md-3">
@@ -218,7 +218,7 @@
   <a target="_blank" href="img/NOTABLE_4.JPG">
     <img src="img/NOTABLE_4.JPG" width="300" height="200">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Mr. Gautam Chatterjee<br>Batch of 1970, B.E, Department of ME.</div>
 </div>
     </div>
 
@@ -232,7 +232,7 @@
   <a target="_blank" href="img/NOTABLE_5.JPG">
     <img src="img/NOTABLE_5.JPG" width="300" height="200">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Mr. Jayanta Kumar Ghosh<br>Batch of 1969, B.E, Department of EE.</div>
 </div>
     </div>
     <div class="col-md-3">
@@ -240,7 +240,7 @@
   <a target="_blank" href="img/NOTABLE_6.JPG">
     <img src="img/NOTABLE_6.JPG" width="300" height="200">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Prof. Kamanio Chattopadhyay<br>Honorary Professor, Department of Materials Engineering, IISC, Bangalore.</div>
 </div>
     </div>
         <div class="col-md-3">
@@ -248,7 +248,7 @@
   <a target="_blank" href="img/NOTABLE_7.JPG">
     <img src="img/NOTABLE_7.JPG" width="300" height="200">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Prof. Probir Kumar Bose<br>Batch of 1974, B.E, Department of ME.</div>
 </div>
     </div>
     <div class="col-md-3">
@@ -256,7 +256,7 @@
   <a target="_blank" href="img/NOTABLE_8.JPG">
     <img src="img/NOTABLE_8.JPG" width="300" height="200">
   </a>
-  <div class="desc">Add a description of the image here</div>
+  <div class="desc">Prof. Satyajit Chakrabarti<br>Founder of IEM.</div>
 </div>
     </div>
     </div>
