--- a/cms.html
+++ b/cms.html
@@ -761,6 +761,7 @@ The Alumni cell shall have the following broadly identified objectives:
         <div class="col-md-8 btw-text shadow">
             <h4> Speaker: <b>Prof. Surjya Kumar Maiti</b> (1970, BE, ME)<br/>
     G.K. Devarajulu Chair Professor, IIT Bombay </h4>
+            <h4> Topic : Trials and Tribulations in the life of a Researcher</h4>
             <h5>Date: March 04, 2017</h5>
         </div>
       </div>
@@ -775,6 +776,7 @@ The Alumni cell shall have the following broadly identified objectives:
         <div class="col-md-8 btw-text shadow">
             <h4> Speaker: <b>Prof. Rathindra Nath Maity</b> (1974, BE, ME)<br/>
     Professor, IIT Kharagpur </h4>
+            <h4> Topic :  A tale of two Machines-Harmonic Drive & ORBIT Motor</h4>
             <h5>Date: January 23, 2017 </h5>
         </div>
       </div>
@@ -789,6 +791,7 @@ The Alumni cell shall have the following broadly identified objectives:
         <div class="col-md-8 btw-text shadow">
             <h4> Speaker: <b>Prof. Alak Bandhopadhyay</b> (1985, BE, ME)<br/>
     Professor, Alabama A&M University, USA </h4>
+             <h4> Topic : Numerical Methods in Energy Harvesting</h4>
             <h5>Date: November 24, 2016 </h5>
         </div>
       </div>
@@ -803,6 +806,7 @@ The Alumni cell shall have the following broadly identified objectives:
         <div class="col-md-8 btw-text shadow">
             <h4> Speaker: <b>Mr. Simanta Ray Chaudhuri</b> (1970, BE, EE)<br/>
     Former Dy. General Manager, L&T and Former Sr. General Manager, McNally Bharat</h4>
+            <h4> Topic : Expectation of corporates & Industries from fresh Graduate Engineers during Campus Interviews</h4>
             <h5>Date: September 15, 2016 </h5>
         </div>
       </div>
@@ -817,6 +821,7 @@ The Alumni cell shall have the following broadly identified objectives:
         <div class="col-md-8 btw-text shadow">
             <h4> Speaker: <b>Dr. Dibakar Sen</b> (1989, BE, ME)<br/>
     Associate Professor, IISC Bangalore</h4>
+            <h4> Topic : Product Design: Innovation & Research</h4>
             <h5>Date: August 31, 2016 </h5>
         </div>
       </div>
@@ -831,6 +836,7 @@ The Alumni cell shall have the following broadly identified objectives:
         <div class="col-md-8 btw-text shadow">
             <h4> Speaker: <b>Prof. Bikramjit Basu</b> (1995, BE, MME)<br/>
     Professor, IISC Bangalore </h4>
+            <h4> Topic : Interdisciplinary research at the frontiers of Engineering Sciences- Hypersonic space vehicles to biomedical</h4>
             <h5> Date: August 29, 2016 </h5>
         </div>
       </div>
@@ -845,6 +851,7 @@ The Alumni cell shall have the following broadly identified objectives:
         <div class="col-md-8 btw-text shadow">
             <h4>Speaker: <b>Prof. Kamanio Chattopadhyay</b> (1971, BE, MME)<br/>
 INAE Distinguished Professor, IISC Bangalore </h4>
+            <h4> Topic : Innovations in Science and Engineering: Lessons from History and Personal experience from the perspective of a Materials Engineer</h4>
             <h5>Date: August 18, 2016</h5>
         </div>
       </div>
@@ -949,8 +956,7 @@ INAE Distinguished Professor, IISC Bangalore </h4>
   </div>
 </div>
 
-
-  <div id="firstbtw" class="modal fade" role="dialog">
+<div id="firstbtw" class="modal fade" role="dialog">
   <div class="modal-dialog modal-lg">
          <div class="modal-content">
       <div class="modal-header">
