--- a/cms.html
+++ b/cms.html
@@ -79,29 +79,34 @@
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner">
     <div class="item active">
-      <img src="img/IMG_7194.JPG" alt="Chania" class="carousel-images">
+      <img src="img/Carousel1.jpg" class="carousel-images">
       <div class="carousel-caption">
-        <h3>Los Angeles</h3>
-        <p>LA is always so much fun!</p>
+        <h3>Welcome to NIT Durgapur</h3>
       </div>
     </div>
 
     <div class="item">
-      <img src="img/IMG_5895.JPG" alt="Chicago" class="carousel-images">
+      <img src="img/Carousel2.jpg" class="carousel-images">
       <div class="carousel-caption">
-        <h3>Chicago</h3>
-        <p>Thank you, Chicago!</p>
+        <h3></h3>
       </div>
     </div>
 
     <div class="item">
-      <img src="img/IMG_7654.JPG" alt="New York" class="carousel-images">
+      <img src="img/Carousel3.jpg" class="carousel-images">
       <div class="carousel-caption">
-        <h3>New York</h3>
-        <p>We love the Big Apple!</p>
+        <h3></h3>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="img/Carousel4.jpg" class="carousel-images">
+      <div class="carousel-caption">
+        <h3></h3>
       </div>
     </div>
   </div>
@@ -240,7 +245,7 @@
   <a target="_blank" href="img/NOTABLE_6.JPG">
     <img src="img/NOTABLE_6.JPG" width="300" height="200">
   </a>
-  <div class="desc">Prof. Kamanio Chattopadhyay<br>Honorary Professor, Department of Materials Engineering, IISC, Bangalore.</div>
+  <div class="desc">Prof. Kamanio Chattopadhyay<br>Honorary Professor, IISC, Bangalore.</div>
 </div>
     </div>
         <div class="col-md-3">
@@ -1008,7 +1013,7 @@ INAE Distinguished Professor, IISC Bangalore </h4>
       <div class="col-md-6 col-md-offset-1">
         <h3><b>Mr. Ashok Manaktala</b></h3>
         <h4>Batch of 1968.</h4>
-        <h4>CEO, Toyota.</h4>
+        <h4>CEO, Topsel Toyota.</h4>
       </div>
       </div>
       <div class="modal-footer">
