--- a/cms.html
+++ b/cms.html
@@ -324,6 +324,9 @@ The Alumni cell shall have the following broadly identified objectives:
     <div class="col-md-10 col-md-offset-1 text-center shadow messagewrapper">
     	<h3 class="font">Message from the Dean(AOTP)</h3>
     	<hr>
+      With a vision to train and transform young professionals into responsible citizens engaging them for the betterment of the society, the Institute aims to produce skilled and trained industry-ready professionals through imparting quality technical education and acts as the center of excellence for engineering and scientific research. Tremendous hard work, confidence and faith of all the stakeholders and well-wishers of the Institute encourage us to strive towards the zenith of academic excellence.
+Being an integral part of the dynamic research community, NIT Durgapur focuses on designing engineering and management programs that instil leadership and teamwork, and carries a global appeal. The undergraduate, postgraduate and Ph.D. programs are regularly revised to comply with global technical developments and market demands. The flexibility in the design of management and engineering education in the Institute incubates global trends and helps to meet future demands, ensuring better Institute-Industry partnership both at local and in global levels. The Institute has been able to create a niche of its own. The Institute also prides itself with having a very active linkage with industry from inception.
+I appreciate the efforts of our vibrant Training and Placement cell and all its members who are in touch with all the industries for training and placement of our students and look forward to garnering fruitful relations with our esteemed recruiters.
 </div>
     </div>
 </div>
@@ -1446,7 +1449,7 @@ INAE Distinguished Professor, IISC Bangalore </h4>
         </div>
       </div> 
       <div class="event-description-text text-center">
-          Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet. Lorem Ipsum Dolor Sit Amet.
+          This group of enthusiastic pupils is third year B Tech undergraduates from various departments who have, in them, a willingness to give back to their alma mater, both as students and as alumni. Currently xx, the number of members is expected to go up in future with students from different years joining it. The primary task of the coordinators is to form a bridge between the former students and the Institute and subsequently, the students, via this Alumni Cell.
       </div> 
   </div>
 
