--- a/cms.html
+++ b/cms.html
@@ -480,6 +480,41 @@ I appreciate the efforts of our vibrant Training and Placement cell and all its 
                       <option>2002</option>
                       <option>2001</option>
                       <option>2000</option>
+                      <option>1999</option>
+                      <option>1998</option>
+                      <option>1997</option>
+                      <option>1996</option>
+                      <option>1995</option>
+                      <option>1994</option>
+                      <option>1993</option>
+                      <option>1992</option>
+                      <option>1991</option>
+                      <option>1990</option>
+                      <option>1989</option>
+                      <option>1988</option>
+                      <option>1987</option>
+                      <option>1986</option>
+                      <option>1985</option>
+                      <option>1984</option>
+                      <option>1983</option>
+                      <option>1982</option>
+                      <option>1981</option>
+                      <option>1980</option>
+                      <option>1979</option>
+                      <option>1978</option>
+                      <option>1977</option>
+                      <option>1976</option>
+                      <option>1975</option>
+                      <option>1974</option>
+                      <option>1973</option>
+                      <option>1972</option>
+                      <option>1971</option>
+                      <option>1970</option>
+                      <option>1969</option>
+                      <option>1968</option>
+                      <option>1967</option>
+                      <option>1966</option>
+                      <option>1965</option>
                     </select>
                 </div>
             </div>
@@ -923,7 +958,22 @@ INAE Distinguished Professor, IISC Bangalore </h4>
         <h4 class="modal-title text-center">Beyond The Wall Lecture #4</h4>
       </div>
       <div class="modal-body">
-        <p>Expectation of corporates & Industries from fresh Graduate Engineers during Campus Interviews</p>
+        <p class="text-center"><b>Expectation of corporates & Industries from fresh Graduate Engineers during Campus Interviews</b></p>
+        <p class="text-center"><b>Mr. Simanta Roy Choudhury, Former DGM of L&T and former Sr. GM of McNally Bharat</b></p>
+        <img class="img-responsive btw-modal-image" src="img/L4.JPG"/>
+        One programme of the lecture series "Beyond the Walls" was held in NIT Durgapur on
+September 15, 2016. Mr. Simanta Roy Choudhury, a distinguished alumnus of the
+Institute, delivered a lecture on Soft Skill Development titled "Expectation of Corporates
+& Industries from fresh Graduate Engineers during Campus Interviews." It was jointly
+organized by the Department of Civil Engineering and the NIT Durgapur Alumni
+Association, and was held in the D. M. Sen Memorial Hall. It was attended by a large
+number of under-graduate and post-graduate students, mainly from the final and prefinal
+years. Mr. Roy Choudhury, speaking from his long experience in the industry in the
+field of conducting campus interviews, gave an extremely informative lecture. He
+pointed out all the major and minor mistakes that students usually make in the
+interviews. He also mentioned the important things that the interviewers look for in the
+students. The students enjoyed the lecture and felt this exposure helped them prepare
+for the campus placement interviews in a much better way.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -939,7 +989,16 @@ INAE Distinguished Professor, IISC Bangalore </h4>
         <h4 class="modal-title text-center">Beyond The Wall Lecture #3</h4>
       </div>
       <div class="modal-body">
-        <p>Product Design: Innovation & Research</p>
+        <p class="text-center"><b>Product Design: Innovation & Research</b></p>
+        <p class="text-center"><b>Prof. Dibakar Sen, Professor, Mechanical Engineering Department, IISc Bangalore</b></p>
+        <img class="img-responsive btw-modal-image" src="img/L3.JPG"/>
+        An invited talk, which is a part of the lecture series "Beyond the Walls", was jointly
+organised by Department of Mechanical Engineering, NIT Durgapur and NITDAA on
+August 31, 2016 at NIT Durgapur. The talk on " Product Design: Innovation &
+Research" was delivered by Prof. Dibakar Sen, an eminent alumnus of the Institute
+and Faculty in IISc Bangalore. In his talk, he discussed several concepts like
+innovative product design, detail of functional product, aesthetics and ergonomics
+consideration in product design.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -955,7 +1014,19 @@ INAE Distinguished Professor, IISC Bangalore </h4>
         <h4 class="modal-title text-center">Beyond The Wall Lecture #2</h4>
       </div>
       <div class="modal-body">
-        <p>Interdisciplinary research at the frontiers of Engineering Sciences- Hypersonic space vehicles to biomedical</p>
+        <p class="text-center"><b>Interdisciplinary research at the frontiers of Engineering Sciences –
+Hypersonic space Vehicles to Biomedical</b></p>
+        <p class="text-center"><b>Prof. Bikramjit Basu, Professor, Materials Research Centre, IISC Bangalore</b></p>
+        <img class="img-responsive btw-modal-image" src="img/L2.JPG"/>
+        An invited talk, which is a part of the lecture series "Beyond the Walls", was jointly
+organised by Department of Mechanical Engineering, NIT Durgapur and NITDAA on
+August 29, 2016 at NIT Durgapur. The talk was delivered by Prof. Bikramjit Basu, an
+eminent alumnus of the Institute, a recipient of the prestigious Shanti Swarup
+Bhatnagar award and Professor in IISc Bangalore. In his talk, he addressed the need
+of multidisciplinary research work in the field of frontiers of Engineering Sciences. He
+also mentioned that in order to achieve such goal, Engineers and Technologists
+need to be used modern tools and techniques such as computational fluid dynamics,
+Finite element analysis of fluid-structure interaction etc.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -971,7 +1042,30 @@ INAE Distinguished Professor, IISC Bangalore </h4>
         <h4 class="modal-title text-center">Beyond The Wall Lecture #1</h4>
       </div>
       <div class="modal-body">
-        <p>Innovations in Science and Engineering: Lessons from History and Personal experience from the perspective of a Materials Engineer</p>
+      <p class="text-center"><b>Innovations in Science and Engineering: Lessons from History and Personal experience from the perspective of a Materials Engineer</b></p>
+        <p class="text-center"><b>Prof. Kamanio Chattopadhyay, INAE Distinguished Professor, IISC Bangalore</b></p>
+        <img class="img-responsive btw-modal-image" src="img/L1.JPG"/>
+        Beyond the Walls, a lecture series by distinguished alumni members organized by
+NIT Durgapur Alumni Association (NITDAA) and National Institute of Technology
+Durgapur, was re-launched on August 18, 2016 at D.M. Sen Hall.
+The first lecture was delivered by Prof. Kamanio Chattopadhyay, who received his
+Bachelors of Engineering Degree in Metallurgical Engineering from Regional
+Engineering College Durgapur in 1971. He is a recipient of the prestigious Shanti
+Swarup Bhatnagar award. Prof. Amalendu Bhushan Bhattacharyya, Chairperson,
+BoG, NIT Durgapur presided over the program and Sri Santi Ranjan Sarkar,
+President, NITDAA briefed the audience about the activities of NITDAA.
+Prof. Chattopadhyay delved into the evolution of technology and the culture which
+incubates it. In the first half of his talk he explored the history of his profession of
+materials engineering to understand innovation and technological progress. He then
+elaborated the central role of the pursuit of individuals for excellence through
+success and failures. In the second half, his personal experience was leveraged to
+answer the same question through a journey that was entwined with several
+breakthroughs of recent time like the discovery of Nobel-winning quasicrystal in the
+eighties or the recent breakthrough on new materials for extreme environments.
+All the students, faculty members and others present listened with rapt attention and
+enjoyed the deliberation. The program was organized by Metallurgical & Materials
+Engineering Department under TEQIP-II and Dr. Supriya Bera and Dr. Manas Kumar
+Mandal, both Assitant Professors of the department, were the Coordinators.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
