--- a/cms.html
+++ b/cms.html
@@ -80,6 +80,8 @@
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
     <li data-target="#myCarousel" data-slide-to="3"></li>
+    <li data-target="#myCarousel" data-slide-to="4"></li>
+    <li data-target="#myCarousel" data-slide-to="5"></li>
   </ol>
   <div class="carousel-inner">
     <div class="item active">
@@ -100,6 +102,20 @@
       <img src="img/Carousel3.jpg" class="carousel-images">
       <div class="carousel-caption">
         <h3></h3>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="img/IMG_7194.JPG" class="carousel-images">
+      <div class="carousel-caption">
+        <h3>Alumni at Dhaka, Bangladesh</h3>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="img/IMG_7654.JPG" class="carousel-images">
+      <div class="carousel-caption">
+        <h3>Alumni during Global Meet 2017</h3>
       </div>
     </div>
 
@@ -194,28 +210,28 @@
   <div class="carousel-inner">
     <div class="item active">
       <div class="row">
-      <div class="col-md-3">
+          <div class="col-md-3">
       <div class="gallery shadow">
-  <a target="_blank" href="img/NOTABLE_1.JPG">
-    <img src="img/NOTABLE_1.JPG" width="300" height="200">
+  <a target="_blank" href="img/NOTABLE_6.JPG">
+    <img src="img/NOTABLE_6.JPG" width="300" height="200">
   </a>
-  <div class="desc">Mr. Ashok Manaktala<br>Batch of 1968.</div>
+  <div class="desc">Prof. Kamanio Chattopadhyay</div>
 </div>
+    </div>
+        <div class="col-md-3">
+      <div class="gallery shadow">
+  <a target="_blank" href="img/NOTABLE_8.JPG">
+    <img src="img/NOTABLE_8.JPG" width="300" height="200">
+  </a>
+  <div class="desc">Prof. Satyajit Chakrabarti</div>
 </div>
+    </div>
     <div class="col-md-3">
       <div class="gallery shadow">
   <a target="_blank" href="img/NOTABLE_2.JPG">
     <img src="img/NOTABLE_2.JPG" width="300" height="200">
   </a>
-  <div class="desc">Prof. Bikramjit Basu<br>Batch of 1995, B.E., Department of MME.</div>
-</div>
-    </div>
-    <div class="col-md-3">
-      <div class="gallery shadow">
-  <a target="_blank" href="img/NOTABLE_3.JPG">
-    <img src="img/NOTABLE_3.JPG" width="300" height="200">
-  </a>
-  <div class="desc">Mr. Dipendra Sharma<br>Batch of 1992.</div>
+  <div class="desc">Prof. Bikramjit Basu</div>
 </div>
     </div>
     <div class="col-md-3">
@@ -223,45 +239,44 @@
   <a target="_blank" href="img/NOTABLE_4.JPG">
     <img src="img/NOTABLE_4.JPG" width="300" height="200">
   </a>
-  <div class="desc">Mr. Gautam Chatterjee<br>Batch of 1970, B.E, Department of ME.</div>
+  <div class="desc">Mr. Gautam Chatterjee</div>
 </div>
     </div>
 
     </div>
     </div>
-
     <div class="item">
       <div class="row">
+            <div class="col-md-3">
+      <div class="gallery shadow">
+  <a target="_blank" href="img/NOTABLE_5.JPG">
+    <img src="img/NOTABLE_10.JPG" width="300" height="200">
+  </a>
+  <div class="desc">Prof. Tarasankar Debroy</div>
+</div>
+    </div>
     <div class="col-md-3">
       <div class="gallery shadow">
   <a target="_blank" href="img/NOTABLE_5.JPG">
     <img src="img/NOTABLE_5.JPG" width="300" height="200">
   </a>
-  <div class="desc">Mr. Jayanta Kumar Ghosh<br>Batch of 1969, B.E, Department of EE.</div>
+  <div class="desc">Mr. Jayanta Kumar Ghosh</div>
 </div>
     </div>
-    <div class="col-md-3">
+          <div class="col-md-3">
       <div class="gallery shadow">
-  <a target="_blank" href="img/NOTABLE_6.JPG">
-    <img src="img/NOTABLE_6.JPG" width="300" height="200">
+  <a target="_blank" href="img/NOTABLE_1.JPG">
+    <img src="img/NOTABLE_1.JPG" width="300" height="200">
   </a>
-  <div class="desc">Prof. Kamanio Chattopadhyay<br>Honorary Professor, IISC, Bangalore.</div>
+  <div class="desc">Mr. Ashok Manaktala</div>
 </div>
-    </div>
+</div>
         <div class="col-md-3">
       <div class="gallery shadow">
-  <a target="_blank" href="img/NOTABLE_7.JPG">
-    <img src="img/NOTABLE_7.JPG" width="300" height="200">
+  <a target="_blank" href="img/NOTABLE_3.JPG">
+    <img src="img/NOTABLE_3.JPG" width="300" height="200">
   </a>
-  <div class="desc">Prof. Probir Kumar Bose<br>Batch of 1974, B.E, Department of ME.</div>
-</div>
-    </div>
-    <div class="col-md-3">
-      <div class="gallery shadow">
-  <a target="_blank" href="img/NOTABLE_8.JPG">
-    <img src="img/NOTABLE_8.JPG" width="300" height="200">
-  </a>
-  <div class="desc">Prof. Satyajit Chakrabarti<br>Founder of IEM.</div>
+  <div class="desc">Mr. Dipendra Sharma</div>
 </div>
     </div>
     </div>
